<resources>
    <string name="app_name">BattleApp</string>
    <string name="versus">VS</string>
    <string name="live_matching_game">Now Live</string>
    <string name="text_search_btn">Search</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_league">Live Leagues</string>
    <string name="title_activity_player">Players</string>
    <string name="title_activity_playerInfo">Player Information</string>
    <string name="title_activity_leagueList">Starcraft League List</string>
    <string name="title_activity_leagueArchive">Archive</string>
    <string name="title_activity_virtualMatching">Virtual Matching</string>
    <string name="content_desc_player_profile">Profile Image</string>
    <string name="default_text_player_name">이영호</string>
    <string name="default_text_player_playid">KTRolster_FLASH</string>
    <string name="default_text_player_race">Terran</string>
    <string name="default_text_player_team">KT Rolster</string>
    <string name="default_text_player_country">KOREA</string>
    <string name="default_text_league_name">STARCRAFT2 STARLEAGUE 2015</string>
    <string name="default_text_round_set">16강 2세트</string>
    <string name="default_text_open_date">2015. 02. 05</string>
    <string name="label_player_name">NAME</string>
    <string name="label_player_id">ID</string>
    <string name="label_player_team">TEAM</string>
</resources>
