<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:contentDescription="@string/content_desc_player_profile"
            android:src="@drawable/noprofile"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/player_name"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/default_text_player_name"/>
            <TextView
                android:id="@+id/player_playid"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_player_playid"/>
            <TextView
                android:id="@+id/player_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_player_race"/>
            <TextView
                android:id="@+id/player_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_player_team"/>
            <TextView
                android:id="@+id/player_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_player_country"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="이 선수의 경기 기록"/>
        <ListView
            android:id="@+id/player_archive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
</LinearLayout>