<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#005766"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/league_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:text="@string/default_text_league_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#003342"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/round_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/default_text_round_set"/>
            <TextView
                android:id="@+id/player1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/default_text_player_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/versus"/>
            <TextView
                android:id="@+id/player2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/default_text_player_name"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
