<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#005766"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/player_list_player_team_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ktrolster_logo"/>
        <TextView
            android:id="@+id/player_list_player_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/default_text_player_team"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#003342"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/player_list_playerrace"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/terran_symbol"/>
        <TextView
            android:id="@+id/player_list_playername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/default_text_player_name"/>
        <TextView
            android:id="@+id/player_list_playerid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#FFBB00"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/default_text_player_playid"/>
    </LinearLayout>
</LinearLayout>
